<resources>
    <string name="app_name">StudentsDB</string>
    <string name="groups">Группы</string>
    <string name="students">Студенты</string>
    <string name="add_group">Добавить группу</string>
    <string name="add_student">Добавить студента</string>
    <string name="group_number">Номер группы</string>
    <string name="faculty_name">Название факультета</string>
    <string name="search">Поиск</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="middle_name">Отчество</string>
    <string name="birth_date">Дата рождения</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="cannot_delete_group_with_students">Невозможно удалить группу, содержащую студентов</string>
</resources>